testdata/baselines/reference/compiler/freshObjectLiteralSubtype.errors.txt
freshObjectLiteralSubtype(4,16): error TS1005: ';' expected.
freshObjectLiteralSubtype(4,16): error TS1003: Identifier expected.
freshObjectLiteralSubtype(9,1): error TS1128: Declaration or statement expected.
freshObjectLiteralSubtype(9,20): error TS1128: Declaration or statement expected.
freshObjectLiteralSubtype(9,20): error TS1005: ',' expected.
freshObjectLiteralSubtype(9,20): error TS1128: Declaration or statement expected.
freshObjectLiteralSubtype(9,20): error TS1005: ';' expected.

==== freshObjectLiteralSubtype (7 errors) ====
    
    function f1() {
        if (!!true) {
            return { valid: true }
                   ~
!!! error TS1005: ';' expected.
                   ~
!!! error TS1003: Identifier expected.
        }
        return f2()
    }
    
    declare const f2: () => { valid: boolean, msg?: undefined }
    ~~~~~~~
!!! error TS1128: Declaration or statement expected.
                       ~
!!! error TS1128: Declaration or statement expected.
                       ~
!!! error TS1005: ',' expected.
                       ~
!!! error TS1128: Declaration or statement expected.
                       ~
!!! error TS1005: ';' expected.
    
    f1().msg
    
    // Repro from https://github.com/microsoft/typescript-go/issues/1742
    
    function validate() {
        if(Math.random() > 0.5) {
            return utilValidate();
        }
        return { valid: true };
    };
    
    
    declare function utilValidate(): {
        valid: boolean;
        msg?: undefined;
    } | {
        valid: boolean;
        msg: string;
    }
    
    validate().msg; // Error in TSGO
    
    // https://github.com/microsoft/typescript-go/issues/1761
    
    function normalise_trace_logs([log]: any[]) {
    	let normalised = [];
        if (typeof log === "string" && log.includes("%c")) {
            normalised.push({ log, highlighted: log.includes("foo") });
        } else {
            normalised.push({ log });
        }
    	return normalised;
    }
    
    function equal<T>(_actual: T, _expected: T): void {}
    
    equal(normalise_trace_logs([]), [
        { log: 'effect' },
        { log: '$derived', highlighted: true },
        { log: 'double', highlighted: false },
        { log: 4 },
    ]);
    
